--- a/public/index.html
+++ b/public/index.html
@@ -4,5 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <div id="root"></div>
+    <div id="modal"></div>
   </body>
 </html>
